templates/es.demo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dingo-demo-es-ingress
    annotations:
        kubernetes.io/ingress.allow-http: "true"
        kubernetes.io/ingress.class: "gce-internal"
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: dingo-demo-es-http
                            port:
                                number: 9200
